<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llCustom_calendar"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@android:color/darker_gray">
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/previousButton"
            android:src="@drawable/ic_back"
            android:onClick="previousMonthAction"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/currentdate"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/toLocalBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Local Cal"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/nextButton"
            android:src="@drawable/ic_forward"
            android:onClick="nextMonthAction"
            android:contentDescription="@string/forward_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4sp"
        android:paddingBottom="4sp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sun"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mon"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tue"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wed"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thu"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fri"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sat"
            android:layout_weight="1"
            android:textStyle="bold"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>