<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/holo_orange_dark">

    <EditText
        android:id="@+id/events_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:hint="@string/type_event"
        android:inputType="textShortMessage"
        android:layout_margin="20dp"
        android:gravity="center"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/events_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/type_desc"
        android:inputType="textMultiLine"
        android:layout_margin="20dp"
        android:gravity="start"
        android:lines="3"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/setEventTime"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_access_time_24"
            android:layout_margin="10dp"
            android:contentDescription="@string/time_button" />

        <TextView
            android:id="@+id/eventTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="00:00 AM"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/addEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_event"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"/>

</LinearLayout>